spacing fixes

--- a/web/src/styles/hero-home.scss
+++ b/web/src/styles/hero-home.scss
@@ -49,7 +49,11 @@ a.middle:hover:before {
   flex-direction: column;
 
   img {
-    margin: 10px 0;
+    margin: 15px 0;
+  }
+
+  img:nth-child(5){
+    margin-top: 25px;
   }
 }
 
@@ -57,10 +61,14 @@ a.middle:hover:before {
   display: flex;
   align-items: center;
   flex-direction: column;
-  // margin-top: 100px;
+  margin-top: 10px;
 
   @media only screen and (max-width:650px){
     margin-top: 100px;
+  }
+
+  @media only screen and (max-width:800px){
+    margin-top: 50px;
   }
 
   img {
@@ -70,7 +78,7 @@ a.middle:hover:before {
 
 .down-arrow {
   position: absolute;
-  bottom: 25px;
+  bottom: 0;
 }
 
 .about {
